crates/python_parser/tests/snapshots/invalid_syntax@expressions__yield__named_expression.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/yield/named_expression.py
---
## AST

```
Module(
    ModModule {
        range: 0..85,
        body: [
            Expr(
                ExprStmt {
                    range: 52..59,
                    value: Yield(
                        YieldExpr {
                            range: 52..59,
                            value: Some(
                                Name(
                                    NameExpr {
                                        range: 58..59,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 63..64,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 63..64,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 66..84,
                    value: Yield(
                        YieldExpr {
                            range: 66..84,
                            value: Some(
                                Tuple(
                                    TupleExpr {
                                        range: 72..84,
                                        elts: [
                                            NumberLiteral(
                                                NumberLiteralExpr {
                                                    range: 72..73,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                            Name(
                                                NameExpr {
                                                    range: 75..76,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            NumberLiteral(
                                                NumberLiteralExpr {
                                                    range: 80..81,
                                                    value: Int(
                                                        2,
                                                    ),
                                                },
                                            ),
                                            NumberLiteral(
                                                NumberLiteralExpr {
                                                    range: 83..84,
                                                    value: Int(
                                                        3,
                                                    ),
                                                },
                                            ),
                                        ],
                                        ctx: Load,
                                        parenthesized: false,
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Unparenthesized named expressions are not allowed
2 | yield x := 1
  |         ^^ Syntax Error: Expected a statement
3 | 
4 | yield 1, x := 2, 3
  |


  |
2 | yield x := 1
3 | 
4 | yield 1, x := 2, 3
  |            ^^ Syntax Error: Expected ',', found ':='
  |
